--- a/package.json
+++ b/package.json
@@ -51,27 +51,21 @@
     "sass-loader": "^4.0.0",
     "style-loader": "^0.13.2",
     "url-loader": "^0.5.8",
-    "webpack": "^1.14.0",
+    "webpack": "^1.15.0",
     "webpack-dev-server": "^1.16.3"
   },
   "dependencies": {
-    "animate.css": "^3.5.2",
     "antd": "^2.9.1",
-    "axios": "^0.15.3",
     "body-parser": "^1.17.0",
     "compression": "^1.6.2",
     "cross-env": "^3.1.4",
     "events": "^1.1.1",
     "express": "^4.15.0",
-    "font-awesome": "^4.7.0",
-    "mobx": "^3.1.7",
-    "mobx-react": "^4.1.3",
+    "highcharts": "^5.0.10",
     "moment": "^2.17.1",
     "morgan": "^1.8.1",
     "react": "^15.0.0",
-    "react-addons-css-transition-group": "^15.4.2",
     "react-dom": "^15.0.0",
-    "react-mixin": "^3.0.5",
     "react-router": "^3.0.2",
     "reload": "^1.1.1",
     "supervisor": "^0.12.0"
