--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "prestart": "webpack",
-    "ppredev": "webpack --config webpack.config.dev.js",
+    "predev": "webpack --config webpack.config.dev.js",
     "dev": "cross-env NODE_ENV=development node  --harmony  server.js",
     "start": "cross-env NODE_ENV=production node  --harmony server.js"
   },
@@ -60,10 +60,12 @@
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.3",
     "cross-env": "^3.1.4",
+    "es6-promise": "^4.1.0",
     "events": "^1.1.1",
     "express": "^4.15.0",
     "express-session": "^1.15.2",
     "highcharts": "^5.0.10",
+    "isomorphic-fetch": "^2.2.1",
     "ldapjs": "^1.0.1",
     "moment": "^2.17.1",
     "morgan": "^1.8.1",
