--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "prestart": "webpack",
-    "predev": "webpack --config webpack.config.dev.js",
+    "ppredev": "webpack --config webpack.config.dev.js",
     "dev": "cross-env NODE_ENV=development node  --harmony  server.js",
     "start": "cross-env NODE_ENV=production node  --harmony server.js"
   },
@@ -75,6 +75,8 @@
     "react-dom": "^15.0.0",
     "react-router": "^3.0.2",
     "reload": "^1.1.1",
-    "sequelize": "^3.30.4"
+    "sequelize": "^3.30.4",
+    "serve-favicon": "^2.4.2",
+    "session-file-store": "^1.0.0"
   }
 }
