--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "webpack study project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "ava",
     "build": "webpack",
     "prestart": "webpack",
-    "ppredev": "webpack --config webpack.config.dev.js",
+    "predev": "webpack --config webpack.config.dev.js",
     "dev": "cross-env NODE_ENV=development node  --harmony  server.js",
     "start": "cross-env NODE_ENV=production node  --harmony server.js"
   },
@@ -18,6 +18,7 @@
   "author": "Peter Lee",
   "license": "MIT",
   "devDependencies": {
+    "ava": "^0.19.1",
     "babel-cli": "^6.23.0",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
