--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "image-webpack-loader": "^3.2.0",
     "imagemin-webpack-plugin": "^1.4.4",
     "json-loader": "^0.5.4",
+    "json-server": "^0.9.6",
     "jsx-loader": "^0.13.2",
     "node-sass": "^4.3.0",
     "postcss-loader": "^1.3.3",
@@ -76,5 +77,6 @@
     "react-router": "^3.0.2",
     "reload": "^1.1.1",
     "sequelize": "^3.30.4"
+
   }
 }
