--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "ldapjs": "^1.0.1",
     "moment": "^2.17.1",
     "morgan": "^1.8.1",
+    "node-schedule": "^1.2.1",
     "pg": "^6.1.5",
     "pg-hstore": "^2.3.2",
     "react": "^15.4.2",
