--- a/package.json
+++ b/package.json
@@ -63,7 +63,6 @@
     "cross-env": "^3.1.4",
     "es6-promise": "^4.1.0",
     "events": "^1.1.1",
-    "excel-export": "^0.5.1",
     "express": "^4.15.0",
     "express-session": "^1.15.2",
     "highcharts": "^5.0.10",
@@ -71,6 +70,7 @@
     "ldapjs": "^1.0.1",
     "moment": "^2.17.1",
     "morgan": "^1.8.1",
+    "node-excel-export": "^1.4.1",
     "node-schedule": "^1.2.1",
     "pg": "^6.1.5",
     "pg-hstore": "^2.3.2",
