--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "whms",
   "version": "1.0.0",
-  "description": "webpack study project",
+  "description": "Working-hours Management System",
   "main": "index.js",
   "scripts": {
     "test": "ava",
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@git.oschina.net:dddpeter/myapp.git"
+    "url": "git@vcs.dev.s.unicc.com.cn:whms/whms.git"
   },
   "author": "Peter Lee",
   "license": "MIT",
